# torch-ios

./: generate_ios_framework
lib/TH/: CMakeLists.txt
lib/luaT/: CMakeLists.txt
pkg/torch/: CMakeLists.txt  TensorMath.lua  init.lua  random.lua  torchcwrap.lua
pkg/wrap/: types.lua
