
FIND_PACKAGE(Lua REQUIRED)

# avoid some cmake warnings
#IF(POLICY CMP0026)
# CMAKE_POLICY(SET CMP0026 OLD)
#ENDIF()

#INCLUDE_DIRECTORIES(${LUA_INCDIR})
INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})

ADD_LIBRARY(luaT luaT.h luaT.c)
#ADD_LIBRARY(luaT SHARED luaT.h luaT.c)
#ADD_LIBRARY(luaT_static STATIC luaT.h luaT.c)

INSTALL(TARGETS luaT
  EXPORT torch-exports
  RUNTIME DESTINATION "${Torch_INSTALL_BIN_SUBDIR}"
  LIBRARY DESTINATION "${Torch_INSTALL_LIB_SUBDIR}"
  ARCHIVE DESTINATION "${Torch_INSTALL_LIB_SUBDIR}")

INSTALL(FILES luaT.h
          DESTINATION "${Torch_INSTALL_INCLUDE_SUBDIR}")

# Create luaT.cmake
GET_TARGET_PROPERTY(LUAT_OUTPUT_NAME luaT LOCATION)
GET_FILENAME_COMPONENT(LUAT_OUTPUT_NAME ${LUAT_OUTPUT_NAME} NAME)
SET(LUAT_LIBRARIES "${Torch_INSTALL_LIB}/${LUAT_OUTPUT_NAME}")
SET(LUAT_INCLUDE_DIR "${Torch_INSTALL_INCLUDE}")
CONFIGURE_FILE(luaTConfig.cmake.in "${CMAKE_CURRENT_BINARY_DIR}/cmake-exports/luaTConfig.cmake")
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/cmake-exports/luaTConfig.cmake" 
  DESTINATION "${Torch_INSTALL_CMAKE_SUBDIR}")
